stupid fix for font size on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,7 +117,7 @@ ul.socialMedia li:nth-last-child(1) {
     display: none !important;
   }
   .socialMedia {
-    font-size: 1em;
+    font-size: 1.5em;
     text-align: center;
     padding-left: 0px;
   }
